fixed small spacing issue in footer and adding the padding

--- a/Pages/About/index.css
+++ b/Pages/About/index.css
@@ -232,7 +232,7 @@ footer{
   align-items: center;
   background-color: #0F203D;
   border-top: 5px solid #9D7501;
-
+  padding: 15px 25px;
 }
 
 footer .col-1, footer .col-2, footer .col-3{
